testdata/baselines/reference/submodule/conformance/plainJSGrammarErrors3.errors.txt
/a.js(2,5): error TS1308: 'await' expressions are only allowed within async functions and at the top levels of modules.


==== /a.js (1 errors) ====
    function foo() {
        await new Promise(undefined);
        ~~~~~
!!! error TS1308: 'await' expressions are only allowed within async functions and at the top levels of modules.
    }
    